tests/expectations/compiler/futures/misplaced_future_fail.out
Error [ESAZ0374005]: A Final may not be used in this way
    --> compiler-test:10:9
     |
  10 |         child.aleo/foo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Finals should be created, assigned to a variable, and consumed without being moved or reassigned.
Error [ESAZ0374005]: A Final may not be used in this way
    --> compiler-test:12:9
     |
  12 |         child.aleo/boo();
     |         ^^^^^^^^^^^^^^^^
     |
     = Finals should be created, assigned to a variable, and consumed without being moved or reassigned.
